# ffmpeg-media-type

./: .pre-commit-config.yaml  404.html  LICENSE  README.ipynb  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
docs/: ffmpeg_media_type.md
ffmpeg_media_type/: index.html
scripts/: compile-readme.py  test-pre-commit.sh  test-update-all.sh  test.sh  update_support_formats.py
search/: search_index.json
src/: main.py  wiki.py
src/ffmpeg_media_type/: __init__.py  conftest.py  exceptions.py  info.py  main.py  schema.py
src/ffmpeg_media_type/cache/: 3dostr.json  3g2.json  3gp.json  4xm.json  a64.json  aa.json  aac.json  aax.json  ac3.json  ac4.json  ace.json  acm.json  act.json  adf.json  adp.json  ads.json  adts.json  adx.json  aea.json  afc.json  aiff.json  aix.json  alaw.json  alias_pix.json  alp.json  amr.json  amrnb.json  amrwb.json  amv.json  anm.json  apac.json  apc.json  ape.json  apm.json  apng.json  aptx.json  aptx_hd.json  aqtitle.json  argo_asf.json  argo_brp.json  (+368 more)
src/ffmpeg_media_type/data/: ffmpeg-3.2.json  ffmpeg-3.3.json  ffmpeg-4.0.json  ffmpeg-4.2.json  ffmpeg-4.3.json  ffmpeg-5.0.json
src/ffmpeg_media_type/tests/: test_info.py
src/ffmpeg_media_type/tests/__snapshots__/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/3.3/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/4.0/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/4.1/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/4.2/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/5.0/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/5.1/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/6.0/: test_info.ambr
src/ffmpeg_media_type/tests/__snapshots__/test_info/: test_detect[10257640.mp4].json  test_detect[188794898-eeb81e4b-b33a-4bdf-85a8-3b4b8460b88a.png].json  test_detect[201432913186_fish.gif].json  test_detect[3c289a15d14d8b6775ec0a2cd233da70b963de5a.mp4].json  test_detect[4ox1IBJxK3cVd0uJA6gOtceSP3g.jpg].json  test_detect[9b5174019e8c9bec190903528ff6d0392a2d6a9b.mp4].json  test_detect[9c7ee468-24a3-4930-9832-73f0f6001ab1.webp].json  test_detect[Cle9pQ5.jpg].json  test_detect[SampleAudio_0.4mb.mp3].json  test_detect[SampleVideo_1280x720_1mb.mp4].json  test_detect[animated-webp.webp].json  test_detect[cd89b1bf161582d55161f5ba94d03cc7728825c2.jpe].json  test_detect[lionic_vp8x_1109.webp].json  test_detect[maxresdefault.jpg-sdafdeagwdsadf].json  test_detect[mp3-with-cover.mp3].json  test_detect[overlay.png].json  test_detect[silent_video.mp4].json  test_detect[tmpz1wcuugh.webp].json
src/ffmpeg_media_type/tests/data/video/: cut__videoconverter.com.mjpeg  test.mjpeg
src/ffmpeg_media_type/utils/: cache.py  ffmpeg.py  ffprobe.py  hotfix_webp.py  loader.py  shell.py  thumbnail.py  wiki_ext.py
src/ffmpeg_media_type/utils/tests/: test_ffmpeg.py  test_ffprobe.py  test_hotfix_webp.py  test_shell.py  test_thumbnail.py
src/ffmpeg_media_type/utils/tests/__snapshots__/: test_ffmpeg.ambr  test_hotfix_webp.ambr  test_shell.ambr  test_thumbnail.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/3.2/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/3.3/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/4.0/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/4.1/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/4.2/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/4.3/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/4.4/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/5.0/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/5.0.2/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/6.0/: test_ffmpeg.ambr
src/ffmpeg_media_type/utils/tests/__snapshots__/test_ffprobe/: test_ffprobe_file[10257640.mp4].json  test_ffprobe_file[188794898-eeb81e4b-b33a-4bdf-85a8-3b4b8460b88a.png].json  (+16 more)
src/ffmpeg_media_type/utils/tests/test_table/: table2.html
src/media_type/: info.py  main.py  table.py
src/media_type/data/: ffmpeg-3.2.json  ffmpeg-3.4.json  ffmpeg-4.1.json  ffmpeg-4.4.json  ffmpeg-5.1.json  ffmpeg-6.0.json
src/media_type/tests/: test_info.py  test_table.py
src/media_type/tests/__snapshots__/: test_info.ambr
src/media_type/tests/test_table/: table1.html
src/media_type/utils/: ffmpeg.py  table.py  wiki_ext.py
src/media_type/utils/tests/: test_ffmpeg.py  test_table.py  test_wiki_ext.py
src/media_type/utils/tests/__snapshots__/: test_ffmpeg.ambr  test_table.ambr  test_wiki_ext.ambr
src/media_type/utils/tests/test_table/: table4.html
src/media_type/utils/tests/test_wiki_ext/: 0-9.html  A-E.html
src/scripts/: main.py
src/scripts/utils/: ffmpeg.py  wiki_ext.py
src/scripts/utils/tests/: test_ffmpeg.py
src/scripts/utils/tests/cassettes/: test__extract_wiki_ext_info.yaml
src/scripts/utils/tests/test_table/: table3.html
