[tool.poetry]
name = "ffmpeg-media-type"
version = "0.0.0"
description = ""
authors = ["lucemia <lucemia@gmail.com>"]
readme = "README.md"
packages = [{ include = "ffmpeg_media_type" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
prospector = "^1.10.2"
bandit = "^1.7.5"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
syrupy = "^4.0.5"
pytest = "^7.4.0"
pytest-vcr = "^1.0.2"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
